spring-jlink, 플러그인 버전업