@@ -1,68 +1,92 @@
-plugins {
-    id 'org.beryx.jlink' version '2.4.4'
-    id "org.javamodularity.moduleplugin" version "1.4.0"
-    id 'org.jetbrains.kotlin.jvm' version "1.3.21"
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
-    id 'org.springframework.boot' version '2.1.3.RELEASE'
-}
-apply plugin: 'io.spring.dependency-management'
-dependencies {
-    configurations.all {
-        exclude group: "commons-logging", module: "commons-logging"
-        exclude group: "com.google.code.findbugs", module: "jsr305"
+    plugins {
+        id 'org.beryx.jlink' version '2.6.5'
+        id "org.javamodularity.moduleplugin" version "1.4.1"
+        id 'org.jetbrains.kotlin.jvm' version "1.3.21"
+        id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+        id 'org.springframework.boot' version '2.1.3.RELEASE'
+    }
+    apply plugin: 'io.spring.dependency-management'
+    dependencies {
+        configurations.all {
+            exclude group: "commons-logging", module: "commons-logging"
+            exclude group: "com.google.code.findbugs", module: "jsr305"
+        }
+
+        implementation project(':library')
+        implementation "com.fasterxml.jackson.core:jackson-databind:${jackson}"
+        implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${jackson}"
+        implementation 'org.jetbrains.kotlin:kotlin-reflect'
+        implementation 'org.springframework.boot:spring-boot-starter:2.1.3.RELEASE'
     }
 
-    compile project(':library')
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jackson}"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${jackson}"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect'
-    implementation 'org.springframework.boot:spring-boot-starter:2.1.3.RELEASE'
-}
+    def sImageName = 'dc-eso-client'
+    def sModuleName = 'org.metalscraps.eso.lang.client'
+    def sMainClass = 'org.metalscraps.eso.lang.client.ClientApplication'
+    mainClassName = "${sModuleName}/${sMainClass}"
+    springBoot { mainClassName = sMainClass }
+    jar {
+        manifest { attributes 'Implementation-Title': sModuleName, 'Main-Class': sMainClass }
+        enabled = true
+    }
+    jlink {
+        moduleName = sModuleName
+        mergedModuleName = "${sModuleName}.merged.module"
+        imageName = sImageName
+        options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+        imageZip = file("$buildDir/${sImageName}-${version}.zip")
+        launcher {
+            name = 'launch'
+            jvmArgs = ['-Dlogback.configurationFile=./logback.xml',
+                       "--add-opens java.base/java.lang=${sModuleName}.merged.module",
+                       "--add-opens java.base/java.io=${sModuleName}.merged.module",
+            ]
+        }
 
-def sImageName = 'dc-eso-client'
-def sModuleName = 'org.metalscraps.eso.lang.client'
-def sMainClass = 'org.metalscraps.eso.lang.client.ClientApplication'
-mainClassName = "${sModuleName}/${sMainClass}"
-springBoot { mainClassName = sMainClass }
-jar.manifest { attributes 'Implementation-Title': sModuleName, 'Main-Class': sMainClass }
+        mergedModule {
+            requires 'java.management'
+            requires 'java.naming'
+            requires 'java.logging'
+            requires 'jdk.httpserver'
+            requires 'java.scripting'
+            requires 'java.sql'
+            requires 'java.prefs'
+            requires 'java.rmi'
+            requires 'java.xml'
+            requires 'java.desktop'
+            requires 'java.instrument'
+            requires 'jdk.unsupported'
 
-jlink {
-    mergedModuleName = "${sModuleName}.merged"
-    imageName = sImageName
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    imageZip = file("$buildDir/${sImageName}-${version}.zip")
-    launcher {
-        name = 'launch'
-        jvmArgs = ['-Dlogback.configurationFile=./logback.xml']
-    }
-    mergedModule {
-        requires 'java.management'
-        requires 'java.naming'
-        requires 'java.logging'
-        requires 'java.sql'
-        requires 'java.xml'
-        requires 'java.desktop'
-        requires 'jdk.unsupported'
-        uses 'java.nio.file.spi.FileSystemProvider'
-        provides 'com.fasterxml.jackson.core.JsonFactory' with 'com.fasterxml.jackson.core.JsonFactory'
-        provides 'com.fasterxml.jackson.core.ObjectCodec' with 'com.fasterxml.jackson.databind.ObjectMapper'
-    }
-}
+            uses 'kotlin.reflect.jvm.internal.impl.util.ModuleVisibilityHelper'
+            uses 'kotlin.reflect.jvm.internal.impl.builtins.BuiltInsLoader'
+            uses 'kotlin.reflect.jvm.internal.impl.resolve.ExternalOverridabilityCondition'
+            uses 'java.nio.file.spi.FileSystemProvider'
 
-tasks.jlink.doLast {
-    copy {
-        from('src/main/resources')
-        into("$buildDir/${sImageName}/bin")
+            provides 'com.fasterxml.jackson.core.JsonFactory' with 'com.fasterxml.jackson.core.JsonFactory'
+            provides 'org.apache.commons.logging.LogFactory' with 'org.apache.commons.logging.LogFactoryService'
+            provides 'kotlin.reflect.jvm.internal.impl.resolve.ExternalOverridabilityCondition' with 'kotlin.reflect.jvm.internal.impl.load.java.ErasedOverridabilityCondition',
+                    'kotlin.reflect.jvm.internal.impl.load.java.FieldOverridabilityCondition',
+                    'kotlin.reflect.jvm.internal.impl.load.java.JavaIncompatibilityRulesOverridabilityCondition'
+            provides 'kotlin.reflect.jvm.internal.impl.builtins.BuiltInsLoader' with 'kotlin.reflect.jvm.internal.impl.serialization.deserialization.builtins.BuiltInsLoaderImpl'
+            provides 'com.fasterxml.jackson.databind.Module' with 'com.fasterxml.jackson.module.kotlin.KotlinModule'
+            provides 'com.fasterxml.jackson.core.ObjectCodec' with 'com.fasterxml.jackson.databind.ObjectMapper'
+        }
+
     }
-}
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
+
+    tasks.jlink.doLast {
+        copy {
+            from('src/main/resources')
+            into("$buildDir/${sImageName}/bin")
+        }
     }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
     }
-}
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
 
